# exhibitioncrm

./: .env.example  .gitignore  .gitmodules  .opencode.json  AI_AGENT_GUIDE.md  CLAUDE.md  CONTACT_DOCUMENTS_PLAN.md  CYBERSECURITY.md  DESIGN.md  DESIGN_SYSTEM.md  Dockerfile.slayer  INFRASTRUCTURE_COSTS.md  INFRASTRUCTURE_COSTS_PLAN_B_GUIDE.md  OFFLINE_MODE_PLAN.md  PRODUCT.md  README.md  REALTIME_BROADCAST_MIGRATION_PLAN.md  SETUP.md  TO-DO.md  assistant-ui-llm.txt  codemagic.yaml  debug_db.js  debug_db.ts  landing_screen2.dart  llm_full_forUI.txt  next.config.mjs  package-lock.json  package.json  plan.md  skills-lock.json  tailwind.config.js  temp_html.html  ui-adpative-styling-plan.md
slayer/: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  mkdocs.yml  pyproject.toml  requirements.txt  start.sh
slayer/.claude/skills/: slayer-models.md  slayer-overview.md  slayer-query.md
slayer/.github/workflows/: ci.yml  publish-test.yml  publish.yml
slayer/docs/: CLAUDE.md  api_gaps.md  database-support.md  development.md  index.md  requirements.txt
slayer/docs/concepts/: formulas.md  ingestion.md  memories.md  models.md  queries.md  references.md  schema-drift.md  search.md  terminology.md
slayer/docs/configuration/: datasources.md  storage.md
slayer/docs/dbt/: dbt_import.md  slayer_vs_dbt.md
slayer/docs/examples/: schema-drift.md
slayer/docs/getting-started/: cli.md  flight-sql.md  index.md  mcp.md  python.md  rest-api.md
slayer/docs/interfaces/: cli.md  flight-sql.md  mcp.md  pg-facade.md  rest-api.md
slayer/docs/reference/: cli.md  mcp.md  python-client.md  rest-api.md
slayer/examples/: seed.py  verify_common.py
slayer/examples/clickhouse/: README.md  docker-compose.yml  start.sh  verify.py
slayer/examples/embedded/: README.md  run.py  verify.py
slayer/examples/mysql/: README.md  docker-compose.yml  start.sh  verify.py
slayer/examples/postgres/: README.md  docker-compose.yml  start.sh  verify.py
slayer/slayer/: __init__.py  __main__.py  async_utils.py  cli.py
slayer/slayer/api/: server.py
slayer/slayer/client/: slayer_client.py
slayer/slayer/core/: enums.py  errors.py  format.py  formula.py  models.py  query.py  refs.py
slayer/slayer/dbt/: __init__.py  converter.py  entities.py  filters.py  manifest.py  models.py  parser.py  sql_resolver.py
slayer/slayer/demo/: __init__.py  jaffle_shop.py
slayer/slayer/embeddings/: __init__.py  client.py  models.py  ranker.py  service.py
slayer/slayer/engine/: column_dependency.py  column_expansion.py  enriched.py  enrichment.py  ingestion.py  profiling.py  query_engine.py  schema_drift.py
slayer/slayer/facade/: __init__.py  catalog.py  datatypes.py  info_schema.py  probe_queries.py  rows.py  translator.py
slayer/slayer/flight/: _capture_stub.py  _flight_sql_pb2.py  auth.py  catalog.py  cli.py  handlers.py  info_schema.py  probe_queries.py  server.py  translator.py  types.py
slayer/slayer/help/: __init__.py
slayer/slayer/mcp/: server.py
slayer/slayer/memories/: __init__.py  models.py  ranker.py  resolver.py  service.py
slayer/slayer/pg_facade/: __init__.py  auth.py  cli.py  connection.py  identity.py  pg_catalog.py  probes.py  protocol.py  server.py  types.py
slayer/slayer/search/: __init__.py  (+4 more)
slayer/specs/: DEV-1357-memories.md  DEV-1390-RESUME.md
slayer/tests/: conftest.py  test_aggregation_gating.py  test_api_server.py  test_canonical_id_helpers.py  test_cascade_strip_on_delete.py  test_cli.py  test_cli_memory_string_ids.py  test_client.py  test_column_dependency.py  test_cross_model_derived_columns.py  test_cross_model_rename_dev1448.py  test_dbt_converter.py  test_dbt_converter_inline_sql.py  test_dbt_entities.py  test_dbt_filters.py  test_dbt_manifest.py  test_dbt_parser.py  test_dbt_sql_resolver.py  test_demo_cli.py  test_embeddings_client.py  test_embeddings_service.py  test_embeddings_storage.py  test_engine_namespacing.py  test_engine_profiling.py  test_entity_resolution.py  test_entry_points_namespacing.py  test_enums.py  test_filter_renamed_measure.py  test_force_clean.py  test_format.py  test_format_propagation.py  test_formula.py  test_help.py  test_idempotent_ingestion.py  test_ingestion.py  test_ingestion_clickhouse.py  test_ingestion_memory_dangling_cleanup.py  test_join_sync.py  test_lightning_talk_notebook.py  test_mcp_server.py  (+54 more)
(+582 files in other folders)
