[project]
name = "motley-slayer"
version = "0.6.10"
description = "A lightweight, agent-first semantic layer for AI agents"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{name = "MotleyAI"}]

[tool.poetry]
packages = [{include = "slayer"}]
keywords = ["semantic-layer", "sql", "ai", "mcp", "data", "analytics", "bi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.urls]
Repository = "https://github.com/MotleyAI/slayer"
Documentation = "https://motley-slayer.readthedocs.io/"
Discord = "https://discord.gg/egWxMctHCA"

[tool.poetry.dependencies]
python = "^3.11"
sqlglot = {version = ">=30.0", extras = ["c"]}
sqlalchemy = ">=2.0"
pydantic = ">=2.0"
python-dateutil = ">=2.8"
pyyaml = ">=6.0"
fastapi = ">=0.100"
uvicorn = ">=0.20"
httpx = {version = ">=0.24", optional = true}
pandas = {version = ">=2.0", optional = true}
mcp = ">=1.0"
mkdocs-material = {version = ">=9.0", optional = true}
psycopg2-binary = {version = ">=2.9", optional = true}
asyncpg = {version = ">=0.27", optional = true}
pymysql = {version = ">=1.0", optional = true}
aiomysql = {version = ">=0.2", optional = true}
clickhouse-sqlalchemy = {version = ">=0.3", optional = true}
# DuckDB + jafgen are core deps so the bundled `slayer datasources create demo`
# works after a single `pip install motley-slayer`.
duckdb = ">=0.9"
duckdb-engine = ">=0.13"
jafgen = "^0.4.14"
# rank-bm25 is unmaintained (last release 0.2.2); revisit if supply-chain
# concerns arise — the actively-maintained alternative is `bm25s`.
rank-bm25 = ">=0.2.2"
dbt-core = {version = ">=1.7", optional = true}
# pyarrow is already a transitive dep of duckdb, but exposing it under the
# `flight` extra makes the Flight SQL facade dependency explicit and lets
# users who skip duckdb still get it via `pip install motley-slayer[flight]`.
pyarrow = {version = ">=18.0", optional = true}
tantivy = "^0.26"
# Embedding-based semantic search (DEV-1386). Optional — search degrades
# gracefully to tantivy + BM25 when this extra is not installed.
litellm = {version = ">=1.50", optional = true}
numpy = {version = ">=1.24", optional = true}

[tool.poetry.extras]
client = ["httpx", "pandas"]
postgres = ["psycopg2-binary", "asyncpg"]
mysql = ["pymysql", "aiomysql"]
clickhouse = ["clickhouse-sqlalchemy"]
dbt = ["dbt-core"]
docs = ["mkdocs-material"]
flight = ["pyarrow"]
# The Postgres wire-protocol facade is pure-stdlib; the empty extra keeps the
# `pip install motley-slayer[pg_facade]` install path consistent.
pg_facade = []
embedding_search = ["litellm", "numpy"]
all = ["httpx", "pandas", "psycopg2-binary", "asyncpg", "pymysql", "aiomysql", "clickhouse-sqlalchemy", "dbt-core", "pyarrow", "litellm", "numpy"]

[project.scripts]
slayer = "slayer.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = ">=5.0"
pytest-timeout = ">=2.3"
ruff = ">=0.4"
pytest-postgresql = "^8.0.0"
psycopg2-binary = "^2.9.11"
pytest-benchmark = "^5.2.3"
duckdb = ">=0.9"
duckdb-engine = ">=0.13"
nbclient = ">=0.10"
nbformat = ">=5.10"
ipykernel = ">=6.0"
pre-commit = "^4.5.1"
notebook = "^7.5.5"
pytest-asyncio = "^1.3.0"
pyinstrument = "^5.1.2"
# Flight SQL facade test fixtures drive the upstream Apache flight-sql-jdbc-driver
# JAR from Python so the capture corpus + integration tests exercise the exact
# wire path a real BI tool would. Java >= 11 must be on PATH.
jaydebeapi = "^1.2.3"
jpype1 = "^1.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/perf"
markers = [
    "integration: marks tests as integration tests (require a real database)",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
# Generated by `protoc --python_out` from FlightSql.proto — leave alone.
"slayer/flight/_flight_sql_pb2.py" = ["E402", "F401"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
